--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.14",
-    "@prisma/client": "^5.8.0",
+    "@prisma/client": "^5.8.1",
+    "@react-icons/all-files": "^4.1.0",
     "daisyui": "^4.6.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
-    "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
